--- a/Assignments/A01_Reproducibility.Rmd
+++ b/Assignments/A01_Reproducibility.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: Reproducibility, Workflow, Version Control"
-author: "Student Name"
+author: "Siying Chen"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -30,22 +30,22 @@ The completed exercise is due on Thursday, 17 January, 2018 before class begins.
 ### Question
 Why are reproducible practices becoming the norm in data analytics?
 
-> Answer: 
+> Answer:Because they can help the researcher to improve their work in the future by recreating the results. They can also help others to understand how the study achieve this result.   
 
 ### Question
 What are your previous experiences with data analytics, R, and Git? Include both formal and informal training.
 
-> Answer: 
+> Answer: I took the statistics class that teaches R in the first semester, but I feel like I've forgotten a lot since then. I've also taken John's advanced GIS last semester, so we used GitHub, but not really Git itself.
 
 ### Question
 Are there any components of the course about which you feel confident?
 
-> Answer: 
+> Answer: I think I will feel confident about the spatial analysis part of this course.
 
 ### Question
 Are there any components of the course about which you feel apprehensive?
 
-> Answer: 
+> Answer: I'm a little anxious about the statistics part of this course.
 
 
 ## 2) GitHub
@@ -53,6 +53,6 @@ Are there any components of the course about which you feel apprehensive?
 ### Your Repository
 Provide a link below to your course repository in GitHub. Make sure you have pulled all recent changes from the course repository (https://github.com/KateriSalk/Environmental_Data_Analytics) and that you have updated your course README file. 
 
-> Answer: 
+> Answer: https://github.com/Sylvia-C/Environmental_Data_Analytics
 
 
