--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Siying Chen"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -36,7 +36,20 @@ The completed exercise is due on Thursday, 24 January, 2019 before class begins.
 4. Insert comments in your code to describe what you are doing.
 
 ```{r}
+# Generate a sequence from 1 to 100, increasing by 4
+seq(1, 100, 4)
 
+# Assign the sequence to seq_by_4
+seq_by_4 <- seq(1, 100, 4)
+
+# Compute the mean of the sequence
+mean(seq_by_4)
+
+# Compute the median of the sequence
+median(seq_by_4)
+
+# Determine whether the mean is greater than the median
+mean(seq_by_4) > median(seq_by_4)
 ```
 
 ## Basics Day 2
@@ -50,7 +63,16 @@ The completed exercise is due on Thursday, 24 January, 2019 before class begins.
 8. Label the columns of your data frame with informative titles.
 
 ```{r}
+# Create vectors
+name <- c('John', 'Sara', 'Janet', 'Paul', 'Alice') # Character vector
+score <- c(80, 75, 45, 60, 100) # Numeric vector
+passing <- c(TRUE, TRUE, FALSE, TRUE, TRUE) # Logical vector
 
+# Combine vectors into dataframe
+student_grades <- data.frame(name, score, passing)
+
+# Label dataframe columns
+names(student_grades) <- c('Name', 'Score', 'Passed'); View(student_grades)
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
