--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -77,16 +77,20 @@ names(student_grades) <- c('Name', 'Score', 'Passed'); View(student_grades)
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> ANSWER: 
+> ANSWER: Data frame is a two-dimensional structure that is more general than a matrix.Data frame can have columns of different types of data, but matrix can only have columns with same type of data.
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. The name of your function should be informative.
 
 11. Apply your function to the vector with test scores that you created in number 5. 
 
 ```{r}
-
+# Create a function with if/else statement
+pass_or_not <- function(x){
+  if(x > 50) {TRUE}
+  else {FALSE}
+}
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
-> ANSWER: 
+> ANSWER: I only used 'if' and 'else' since there are only two conditions
