--- a/Lessons/04_CodingBasics.Rmd
+++ b/Lessons/04_CodingBasics.Rmd
@@ -36,29 +36,29 @@ vector2
 vector3 <- c(TRUE,TRUE,TRUE,FALSE,TRUE,FALSE) #logical vector
 vector3
 
-vector1[3] # 
+vector1[3] # the third element in vector1
 
 # Matrices ----
-matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # 
+matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # create a matrix from 1 to 20, make 5 rows and 4 columns (goes vertically/by column)
 matrix1
-matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #
+matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) # create a matrix from 1 to 20, make 5 rows and 4 columns, run by row (horizontally first)
 matrix2
 matrix3 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE, # return after comma continues the line
                   dimnames = list(c("uno", "dos", "tres", "cuatro", "cinco"), 
-                                  c("un", "deux", "trois", "cat"))) #
+                                  c("un", "deux", "trois", "cat"))) # name the rows and columns
 matrix3
 
-matrix1[4, ] #
-matrix1[ , 3] #
-matrix1[c(12, 14)] #
-matrix1[c(12:14)] #
-matrix1[2:4, 1:3] #
+matrix1[4, ] # show row 4 of matrix1
+matrix1[ , 3] # show colum 3 of matrix1
+matrix1[c(12, 14)] # show elements 12 and 14 (R will still find the elements vertically/by column)
+matrix1[c(12:14)] # show elements between 12 to 14
+matrix1[2:4, 1:3] # show section between row 2 to 4 and column 1 to 3
 
 cells <- c(1, 26, 24, 68)
 rnames <- c("R1", "R2")
 cnames <- c("C1", "C2") 
 matrix4 <- matrix(cells, nrow = 2, ncol = 2, byrow = TRUE,
-  dimnames = list(rnames, cnames)) # 
+  dimnames = list(rnames, cnames)) # create matrix fo cells (vectors), with 2 rows and 2 columns, run by row, name dimensions by rnames and cnames
 matrix4
 
 # Lists ---- 
@@ -66,15 +66,15 @@ list1 <- list(name = "Maria", mynumbers = vector1, mymatrix = matrix1, age = 5.3
 list1[[2]]
 
 # Data Frames ----
-d <- c(1, 2, 3, 4) # What type of vector?
-e <- c("red", "white", "red", NA) # What type of vector?
-f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector?
+d <- c(1, 2, 3, 4) # What type of vector? numeric
+e <- c("red", "white", "red", NA) # What type of vector? character
+f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector? logical
 dataframe1 <- data.frame(d,e,f) #
-names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # 
+names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # name dataframe columns
 
-dataframe1[1:2] # 
-dataframe1[c("ID","Passed")] # 
-dataframe1$Color # 
+dataframe1[1:2] # show columns 1 to 2 (in matrix, it would show the first two elements)
+dataframe1[c("ID","Passed")] # show columns ID and Passed
+dataframe1$Color # show the specific column
 
 ```
 QUESTION: How do the different types of data appear in the Environment tab?
@@ -83,11 +83,11 @@ QUESTION: How do the different types of data appear in the Environment tab?
 
 QUESTION: In the R chunk below, write "dataframe1$". Press `tab` after you type the dollar sign. What happens?
 
-> ANSWER: 
+> ANSWER: calls a specifc column
 
 QUESTION: What happens when a comment in R is followed by "----"?
 
-> ANSWER:
+> ANSWER: a new section
 
 Advanced: Sequential section headers can be created by using at least four -, =, and # characters.
 
@@ -129,7 +129,7 @@ library(dplyr)
 library(ggplot2)
 
 # Some packages are umbrellas under which other packages are loaded
-#install.packages(tidyverse)
+#install.packages("tidyverse")
 library(tidyverse)
 ```
 What happens in the console when you load a package?
