--- a/Lessons/05_DataExploration.Rmd
+++ b/Lessons/05_DataExploration.Rmd
@@ -65,6 +65,7 @@ Note: In the Knit menu in the Editor, you will need to specify whether your knit
 
 ```{r}
 # Absolute file path (not recommended)
+# Because it's specific to one computer
 #read.csv("/Users/katerisalk/Documents/Duke/Courses/Environmental_Data_Analytics/Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
 # Relative file path (friendly for users regardless of machine)
