--- a/Lessons/05_DataExploration.Rmd
+++ b/Lessons/05_DataExploration.Rmd
@@ -71,10 +71,12 @@ Note: In the Knit menu in the Editor, you will need to specify whether your knit
 # Relative file path (friendly for users regardless of machine)
 USGS.flow.data <- read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
-# What happens if we don't assign a name to our imported dataset?
+# What happens if we don't assign a name to our imported dataset? 
+# It would show the table in the console
 #read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
 # Another option is to choose with your browser
+# But it's not reproducible
 # read.csv(file.choose())
 
 # To import .txt files, use read.table rather than read.csv
@@ -91,7 +93,7 @@ Take a moment to read through the README file associated with the USGS dataset o
 View(USGS.flow.data)
 # Alternate option: click on data frame in Environment tab
 
-class(USGS.flow.data)
+class(USGS.flow.data) #data type
 colnames(USGS.flow.data)
 
 # Rename columns
@@ -102,14 +104,14 @@ colnames(USGS.flow.data) <- c("agency_cd", "site_no", "datetime",
                               "gage.height.max", "gage.height.max.approval", 
                               "gage.height.min", "gage.height.min.approval", 
                               "gage.height.mean", "gage.height.mean.approval")
-str(USGS.flow.data)
-dim(USGS.flow.data)
-length(USGS.flow.data)
+str(USGS.flow.data) #structure
+dim(USGS.flow.data) #dimension
+length(USGS.flow.data) #number of columns, the width?
 
-head(USGS.flow.data)
-head(USGS.flow.data, 10)
-tail(USGS.flow.data, 5)
-USGS.flow.data[30000:30005, c(3, 8, 14)]
+head(USGS.flow.data) #the first couple of rows, default is 6
+head(USGS.flow.data, 10) #first 10 rows
+tail(USGS.flow.data, 5) #last 5 rows
+USGS.flow.data[30000:30005, c(3, 8, 14)] #rows 30000 to 30005, columns 3, 8 and 14
 
 class(USGS.flow.data$datetime)
 class(USGS.flow.data$discharge.mean)
@@ -122,7 +124,7 @@ summary(USGS.flow.data$gage.height.mean)
 ```
 
 What happened to blank cells in the spreadsheet when they were imported into R?
-> ANSWER: 
+> ANSWER: they become NA
 
 ## TIPS AND TRICKS: SPREADSHEETS
 
