add how to view first few lines in R markdown only needs 4 components rather than 5 in vectors

--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -75,6 +75,9 @@ student_grades <- data.frame(name, score, passing)
 
 # Label dataframe columns
 names(student_grades) <- c('Name', 'Score', 'Passed'); View(student_grades)
+
+# Show the first few lines
+head(student_grades)
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
