--- a/Lessons/12_GLMs.Rmd
+++ b/Lessons/12_GLMs.Rmd
@@ -53,14 +53,14 @@ For the NTL-LTER dataset, can we predict irradiance (light level) from depth?
 irradiance.regression <- lm(PeterPaul.chem.nutrients$irradianceWater ~ PeterPaul.chem.nutrients$depth)
 # another way to format the lm function
 irradiance.regression <- lm(data = PeterPaul.chem.nutrients, irradianceWater ~ depth)
-summary(irradiance.regression)
+summary(irradiance.regression) #irridiance = 487-96(depth)+error
 
 # Correlation
 cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth)
 ```
 Question: How would you report the results of this test (overall findings and report of statistical output)?
 
-> ANSWER: 
+> ANSWER: irridiance is predicted around 487 at the surface, decrease 96 with every unit with depth. (linear regression; R2 = 0.31, p < 0.0001, DF = 15449)
 
 So, we see there is a significant negative correlation between irradiance and depth (lower light levels at greater depths), and that this model explains about 31 % of the total variance in irradiance. Let's visualize this relationship and the model itself. 
 
@@ -84,7 +84,7 @@ The option best suited for communicating findings is to plot the explanatory and
 # Plot the regression
 irradiancebydepth <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  #ylim(0, 2000) +
+  ylim(0, 2000) + #might want to remove the outlier
   geom_point() 
 print(irradiancebydepth) 
 ```
@@ -94,7 +94,7 @@ Given the distribution of irradiance values, we don't have a linear relationship
 ```{r, fig.height = 3, fig.width = 4}
 PeterPaul.chem.nutrients <- filter(PeterPaul.chem.nutrients, irradianceWater != 0)
 irradiance.regression2 <- lm(data = PeterPaul.chem.nutrients, log(irradianceWater) ~ depth)
-summary(irradiance.regression2)
+summary(irradiance.regression2) #log(irridiance) = 6.2-0.74(depth)+error
 plot(irradiance.regression2)
 
 # Add a line and standard error for the linear regression
@@ -114,6 +114,15 @@ irradiancebydepth2 <-
 print(irradiancebydepth2)
 
 # Make the graph attractive
+irradiancebydepth3 <- 
+    ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
+    geom_point(size = 1, alpha = 0.3) +
+    scale_y_log10() +
+    geom_smooth(method = 'lm', se = FALSE, color = "magenta") +
+    labs(x = "Depth (m)", y = "Water Irridiance (units)") + 
+  scale_x_continuous(breaks = c(0, 2, 4, 6, 8, 10, 12))
+    
+print(irradiancebydepth3)
 
 ```
 
@@ -130,13 +139,13 @@ It is possible, and often useful, to consider multiple continuous explanatory va
 
 ``` {r, fig.height = 3, fig.width = 4}
 TPregression <- lm(data = PeterPaul.chem.nutrients, tp_ug ~ depth + dissolvedOxygen)
-summary(TPregression)
+summary(TPregression) #TP = 6+1.5(depth)+0.94(D.O.)+error, but it only explains 8% of the data
 
 TPplot <- ggplot(PeterPaul.chem.nutrients, 
                  aes(x = dissolvedOxygen, y = tp_ug, color = depth)) +
   geom_point() +
   xlim(0, 20)
-print(TPplot)
+print(TPplot) #linear model is not a good predictor in this case
 ```
 ### Correlation Plots
 We can also make exploratory plots of several continuous data points to determine possible relationships, as well as covariance among explanatory variables. 
@@ -162,7 +171,7 @@ Let's say we want to know which explanatory variables will allow us to best pred
 PeterPaul.naomit <- na.omit(PeterPaul.chem.nutrients)
 TPAIC <- lm(data = PeterPaul.naomit, tp_ug ~ depth + dissolvedOxygen + 
               temperature_C + tn_ug + po4)
-step(TPAIC)
+step(TPAIC) #AIC value lower the better
 TPmodel <- lm(data = PeterPaul.naomit, tp_ug ~ temperature_C + tn_ug)
 summary(TPmodel)
 
@@ -176,11 +185,11 @@ Let's say we wanted to predict total nitrogen concentrations by depth and by lak
 ```{r, fig.height = 3, fig.width = 4}
 # main effects
 TNancova.main <- lm(data = PeterPaul.chem.nutrients, tn_ug ~ lakename + depth)
-summary(TNancova.main)
+summary(TNancova.main) #TN = 353[paul lake at the surface]+136(peter lake)-9.7(depth)+error
 
 # interaction effects
 TNancova.interaction <- lm(data = PeterPaul.chem.nutrients, tn_ug ~ lakename * depth)
-summary(TNancova.interaction)
+summary(TNancova.interaction) #TN = 325[paul lake at the surface]+185(peter lake)+20(paul)(depth)-48(peter)(depth)+error
 
 TNplot <- ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = tn_ug, color = lakename)) + 
   geom_point() + 
